Bug 2581 -  long bucket names are truncated
On-behalf-of: Eugene Matveyev <evgeniy.m@monterosa.co.uk>
Reviewed-on: http://review.northscale.com/2953
Tested-by: Aliaksey Kandratsenka <alkondratenko@gmail.com>

--- a/deps/menelaus/priv/public/css/screen.css
+++ b/deps/menelaus/priv/public/css/screen.css
@@ -1057,7 +1057,8 @@ ul.tabs .alert_num_display .alert_num {display:block;}
 .buckets_tab .gong_rb .side {background-image:url(../images/gong_rb_2.gif);}
 
 .buckets_tab .bucket_info {padding:0;}
-.buckets_tab .bucket_info > table .highlight td {height:68px;background-color:#eee;}
+.buckets_tab .bucket_info > table {height:68px;}
+.buckets_tab .bucket_info > table .highlight td {background-color:#eee !important;}
 .bucket_properties_table {width:550px;}
 .bucket_properties_table tr td {padding:0 0 2px 5px;text-align:left !important; vertical-align:top !important; color:#444245; line-height:16px; background:none !important; border:0px !important;}
 .buckets_tab table.label {float:left;margin:2px 0 0;}
